testsuite/poke.pkl/printf-diag-1.pk
/* { dg-do compile } */

printf "%s", 32;   /* { dg-error "" } */
